Fixed a problem where the height of the grid was too big

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ button {
   align-items: center; /* Centra el contenido verticalmente dentro del contenedor */
   width: 100%;
   max-width: 35%;
-  
+  margin: 0 auto;
 }
 
 .square {
